<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#D3E3CD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.Marca">


    <TextView
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="41dp"
        android:text="@string/txtMarca"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt2"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/edtMarca"
        android:textColorHint="@color/black"

        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnAgregarMarca"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMarca"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="#D6D6D6"
            android:inputType="text"
            android:outlineSpotShadowColor="#000000"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAgregarMarca"
        android:layout_width="248dp"
        android:layout_height="0dp"
        android:layout_marginBottom="276dp"
        android:backgroundTint="#3D8A4F"
        android:text="@string/btnAgregarMarca"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt2"
        app:layout_constraintStart_toStartOf="@+id/txt2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="166dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toTopOf="@+id/txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/aggmarca" />

</androidx.constraintlayout.widget.ConstraintLayout>