<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3E3CD"
    tools:context=".Vista.Login">


    <View
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#27AE60"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#27AE60"
        android:text="@string/btnIniciar"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="327dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:text="@string/txttitulo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="253dp"
        android:layout_height="152dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitulo"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginBottom="68dp"
        android:hint="@string/edtPass1"
        android:textColorHint="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnIniciar"
        app:layout_constraintEnd_toEndOf="@+id/txt2"
        app:layout_constraintStart_toStartOf="@+id/txt2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPass"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="#D6D6D6"
            android:outlineSpotShadowColor="#000000"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt2"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="36dp"
        android:textColorHint="@color/black"
        android:hint="Correo"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUsuario"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"
            android:outlineSpotShadowColor="#000000"
            android:background="#D6D6D6"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>